[package]
name = "oct_relayer"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "4"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"

rs_merkle = "1.2"
sqlite = "0.30"
subxt = "0.27"
tokio = {version = "1", features = ["full"] }
anyhow = "1.0"
toml_edit = "0.19"

# substrate dep
codec = { package = "parity-scale-codec", version = "3.4.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
binary-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

[dependencies.abscissa_core]
version = "0.7.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.2"

